--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+
+.body{
+  background-color: #f5f6ff;
+}
+.headline-text{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  padding: 10px;
+  max-width: 700px;
+  margin:50px auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-container{
+  position: absolute;
+  /* background-color: rgba(0,0,0,0.2);
+  left: 0; */
+  right: 0;
+  bottom: 0;
+  top: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.add-container form{
+width: 420px;
+display: flex;
+background-color: white;
+flex-direction: column;
+padding: 50px 40px;
+box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+border-radius: 5px;
+margin-left: auto;
+margin-right: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-container form label{
+  font-size: 18px;
 }
+
+.add-container form input{
+  font-size: 18px;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+
+
+.radio-btn{
+  margin-left: 5px;
+}
+.forgot-password{
+  margin-left: 100px;
+  margin-top: 0px;
+  color:tomato;
+  font-size: 18px;
+}
+
